--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
 	<meta charset="UTF-8">
-	<title>Hangman Game</title>
+	<title>Hangman Game by Marcianelli</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -11,13 +11,21 @@
 <body>
  
 
-	<h1> Let's play Hangman!</h1>
+	<h1>Hangman with words from Point Reyes National Seashore!</h1>
+	<br><br>
 	
 	
+
+	
+	<h3 <span id="word-blank"></span></h3>
 	<br>
-	<p>Guesses remaining: <span id="guesses-left"></span></p>
 	
-	<h3 id="word"></h3>
+	<h3>Incorrect Letters:<span id ="wrong-guesses"></span></h3><br>
+	<p>Guesses remaining: <span id="guesses-left"></span></p>
+
+	<p>Wins: <span id="wincounter"></span></p>
+	
+	<p>Losses: <span id="losscounter"></span></p>
 
 
 	
