--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	
 	<p>Losses: <span id="losscounter"></span></p>
 
+	<br><br>
+	<img src="assets/images/images_1621_98c89bc8760_original.jpg" alt="Pt Reyes Drakes Bay coast">
+
 
 	
 
